fix: dark mode background to match notion's dark mode bg

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: system-ui;
-  background: rgb(63,63,63);
+  background: rgb(25,25,25);
   color: white;
   height: 100vh;
   margin: 0;
